--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 		<img src="./assets/tiles.png">
 	</div>
     <script src="hello-world.js"></script>
-    <script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script>
+    <!--script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
 </body>
 </html>
