--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" type="image/png" href="./favicon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body onload="HELLO_WORLD.go()">
+<body style="overflow: hidden" onload="HELLO_WORLD.go()">
 	<!--PRELOAD ASSETS-->
 	<div style="position: fixed; left: 100vw">
 		<img src="./assets/tiles.png">
