NOW WITH SPUNCH BOB

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 	<link rel="shortcut icon" type="image/png" href="./favicon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="overflow: hidden" onload="HELLO_WORLD.go()">
+<body style="overflow: hidden" onload="HELLO_WORLD.init()">
 	<!--PRELOAD ASSETS-->
 	<div style="position: fixed; left: 100vw">
-		<img src="./assets/tiles.png">
-	</div>
-    <script src="hello-world.js"></script>
-    <!--script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
+    <img src="./assets/tilesDefault.png">
+    <img src="./assets/tilesGrass.png">
+    <img src="./assets/ocean.jpg">
+    <img src="./assets/spunch bob.jpg">
+    <audio>
+      <source src="./assets/Koukyoukyoku 'Douran' Dai'ni Gakushou Yori.mp3">
+    </audio>
+  </div>
+  <script src="hello-world.js"></script>
+  <!--script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
 </body>
 </html>
