--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+  hello-world by Literal line
+  more at quique.gq
+
+  v0.1-20210212-0325est
+-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +12,7 @@
 	<meta charset="UTF-8">
 	<link rel="icon" type="image/png" href="./favicon.png" />
 	<link rel="shortcut icon" type="image/png" href="./favicon.png" />
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css?ver=0.1-20210212-0325est">
 </head>
 <body style="overflow: hidden" onload="HELLO_WORLD.init()">
 	<!--PRELOAD ASSETS-->
@@ -19,7 +25,7 @@
       <source src="./assets/Koukyoukyoku 'Douran' Dai'ni Gakushou Yori.mp3">
     </audio>
   </div>
-  <script src="hello-world.js"></script>
+  <script src="hello-world.js?ver=0.1-20210212-0325est"></script>
   <!--script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
 </body>
 </html>
