FRAMERATE-INDEPENDENT PHYSICS FINALLY!! ALL HAIL THE SPLUGNGONOBS!!

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </audio>
   </div>
   <script src="hello-world.js?ver=0.1-20210212-1825est"></script>
-  <!--script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
+  <script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
 </body>
 </html>
