--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </audio>
   </div>
   <script src="hello-world.js?ver=0.1-20210213-0053est"></script>
-  <script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
+  <!--script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
 </body>
 </html>
