--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
 	<link rel="shortcut icon" type="image/png" href="./favicon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css?ver=0.1-20210213-0053est">
 </head>
-<body style="overflow: hidden" onload="HELLO_WORLD.init()">
+<body style="overflow: hidden" onload="HELLO_WORLD()">
 	<!--PRELOAD ASSETS-->
 	<div style="position: fixed; left: 100vw">
     <img src="./assets/tilesDefault.png">
     <img src="./assets/tilesGrass.png">
     <img src="./assets/ocean.jpg">
     <img src="./assets/spunch bob.jpg">
+    <img src="./assets/patrice.png">
     <audio>
       <source src="./assets/Koukyoukyoku 'Douran' Dai'ni Gakushou Yori.mp3">
     </audio>
   </div>
+  <script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script>
   <script src="hello-world.js?ver=0.1-20210213-0053est"></script>
-  <!--script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
 </body>
 </html>
