--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <source src="./assets/Koukyoukyoku 'Douran' Dai'ni Gakushou Yori.mp3">
     </audio>
   </div>
-  <script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script>
+  <!--script src="https://markknol.github.io/console-log-viewer/console-log-viewer.js"></script-->
   <script src="hello-world.js?ver=0.1-20210213-0053est"></script>
 </body>
 </html>
